# PacMan-PisiBot

./: CMakeLists.txt  README.md  avr-binutils-2.33.1-1-x86_64.pkg.tar.xz  avr-binutils-2.33.1-1-x86_64.pkg.tar.xz.sig  cmd_control.c  cmd_control.h  drive_control.c  drive_control.h  drive_control_mockup.c  drive_control_mockup.h  edit.sh  main.c  pooramine-vea-arvutus.ods  sirgj-soitmine-vea-arvutus.ods
old-code/: main.c
old-code/cmd_control/: cmd_control.c  cmd_control.h
playground/: calc_checksum.c  get_cmds.c  get_cmds_new.c  preamble-check.c
serial-control/: serial-control.py
